@@ -1,3 +1,10 @@
+2009-01-24 Borut Razem <borut.razem AT siol.net>
+
+	* as/asranlib/asranlib.h: changed type of offset to unsigned int to
+	  make it work on ppc Mac OS X (off_t is 64 bit and is not converted
+	  to 32 bit unsigned int when calling sputl() since it is a macro
+	* as/link/lkar.c: changed the initialization of This->loaded
+
 2009-01-23 Borut Razem <borut.razem AT siol.net>
 
 	* as/link/lkar.h: changed type of ar_size to size_t to make it work on
